
=item *

Updated autovacuum documentation in L<Bric::DBA|Bric::DBA>. [David]

=item *

The installer now also checks in F</usr/lib> for libraries, by way of searching
C<$Config{libpth}> as well as C<$Config{loclibpth}>. [Steffen Schwigon]

=item *

The C<publish_status> attribute can now be set in stories and media created
via SOAP. [David]

=back

=head2 Bug Fixes

=over

=item *

More changes around bug 1267, remove protocol+hostname+port from practically
all redirects (especially "user profiles") in order to allow reverse proxying
to work in Apache2. [Steffen Schwigon]

=item *

The C<$BRICOLAGE_ROOT> environment variable specified in
F<contrib/start_scripts/freebsd> is now exported, allowing it to be properly
passed through to F<bric_apachectl>. [David]

=item *

Fix for bug 1254: checkbox fields are now saved correctly. Reported by
Dawn Buie. [Scott]

=item *

Fix for bug 1294, where Search/Replace in Bulk Edit wasn't working. Reported by
Phillip Smith. [Greg Heo]

=item *

Fix for bug 1269, needed to HTML-escape Notes. Reported by Matt Rolf. [Scott]

=item *

For bug 1284, weren't able to search element_type by output_channel in
C<bric_soap>. Reported by George Harrison. [Scott]

=item *

Bug 1291, added check for max_length of fields when importing in
C<bric_soap>. Reported by Simon Wilcox. [Scott]

=item *

Fix bug 1264, prevent searching on bad dates (like February 31). Reported by
Marshall Roch. [Greg Heo]

=item *

Fix bug 1259, so burn_again works in the TT and PHP burners. Reported by
Adeola Awoyemi. [David and Scott]

=item *

Fix bug 1307, related stories can be unrelated. Reported by Steffen Schwigon.
[Scott]

=item *

Fixed issue with trailing newlines sometimes becoming a part of a
contributor's name. [Greg Heo and Ryan O'Toole]

=item *

Eliminated backslashes in F<sql/Pg/Bric/Biz/Asset/Template.val>, which were
causing warnings under PostgreSQL 8.3. The backslashes were for newlines, so I
just switched to real newlines, instead.

=item *
