@@ -162,7 +162,7 @@ if ($at->is_related_media) {
     # Set the array of possible values, if necessary.
     if ( my $tmp = $vals->{props}{vals} ) {
         if ($vals->{props}{type} eq 'codeselect') {
-            $vals->{props}{vals} = eval_codeselect($tmp);
+            $vals->{props}{vals} = eval_codeselect($tmp, $dt);
         } else {
             my $val_prop;
             foreach my $line (split /\n/, $tmp) {
